Also Fixed height for full covers

--- a/app/components/Containers/Manga/styles.scss
+++ b/app/components/Containers/Manga/styles.scss
@@ -4,13 +4,8 @@
 }
 
 .cover {
-  height: 200px;
+  height: 300px;
   background: #BDBDBD;
-  object-fit: contain;
-}
-
-.fullCover {
-  width: 100%;
   object-fit: contain;
 }
 
